--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
@@ -8,6 +8,7 @@
     int r = -1;
     int galeryCheker = 0;
     int countKleinZise = 1;
+    int countSize = 0;
 }
        
 @if (User.IsInRole("admin"))
@@ -121,14 +122,16 @@
                
                 <hr />
                 <div>
-                <h1>Aussen & Innen <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
+                <h1>Aussen & Innen <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /></h1>
                 <div id="Aussen_Innen_ProfilDopel">
 
                     <div id="AussenProfilDopel">
                         @foreach (var list in @ViewBag.Size)
                         {
+                            <input id="addAussen_Innen_remove" onclick="AussenInnenDelet(@countSize)" data-id="@countSize" class="btn btn-danger" type="button" value="-" />
                             <input class="form-control" name="SizeAus" id="aus" value="@list.aussen" />
                             <input class="form-control" type="number" step="0.01" name="costSizeAussen" id="ausCost" value="@list.costSizeAussen" />
+                            countSize++;
                         }
                     </div>
                     <div id="InnenProfilDopel">
