--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
@@ -207,7 +207,7 @@
 
                         @foreach (var list in ViewBag.Size)
                         {
-                            <input id="addAussen_Innen_remove"   onclick="AussenInnenDelet(@countSize)"  class="btn btn-danger" type="button" value="-" />
+                                    <input id="addAussen_Innen_remove" onclick="AussenInnenDelet(@countSize)" data-id="@countSize" class="btn btn-danger" type="button" value="-" />
                                     <input class="form-control" name="SizeAus" id="aus" value="@list.aussen" data-index="@countSize" />
                                     <input class="form-control" type="number" step="0.01" name="costSizeAussen" data-index="@countSize" id="ausCost" value="@list.costSizeAussen" />
                             countSize++; 
@@ -217,8 +217,7 @@
                         @foreach (var list in ViewBag.Size)
                         {
                                     <input class="form-control" name="SizeInen" id="inter" value="@list.Intern" data-index="@countSize" />
-                                    <input class="form-control" name="costSizeIntern" type="text" id="interCost" data-index="@countSize" value="@list.costSizeIntern" />
-                                  
+                                    <input class="form-control" name="costSizeIntern" type="text" id="interCost" data-index="@countSize" value="@list.costSizeIntern" />      
                         }
                     </div>
                    
