--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
@@ -253,6 +253,7 @@
                                     <div class="arrow-right">
                                     </div>
                                     <div>
+                          
                                         <table class="table">
                                             <thead>
                                                 <tr>
@@ -283,9 +284,12 @@
                             }
                         }
 
-                        <button type="button" onclick="newKlein()" class="btn danger">Neue Größe erstellen</button>
-                    </div>
-
+                        <div>
+                            <button type="button" onclick="newKlein()" class="btn danger">Neue Größe erstellen</button>
+                        </div>
+                  </div>
+                  
+                    
                    
                 
                 <div id="productOptions">
