--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
@@ -7,6 +7,7 @@
     int f = -1;
     int r = -1;
     int galeryCheker = 0;
+    int countSize = 0;
 }
 @if (User.IsInRole("admin"))
 {
@@ -112,14 +113,17 @@
                     <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
                 <hr />
-                <h1>Aussen & Innen <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
+
+                <h1>Aussen & Innen <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /></h1>
                 <div id="Aussen_Innen_ProfilDopel">
 
                     <div id="AussenProfilDopel">
                         @foreach (var list in @ViewBag.Size)
                         {
-                            <input class="form-control" name="Size" id="aus" value="@list.sizeVorhangschloss" />
-                            <input class="form-control" name="CostSize" id="inter" value="@list.Cost" />
+                            <input id="addAussen_Innen_remove" onclick="AussenInnenDelet(@countSize)" data-id="@countSize" class="btn btn-danger" type="button" value="-" />
+                            <input class="form-control" name="Size" id="aus" value="@list.sizeVorhangschloss" data-index="@countSize" />
+                            <input class="form-control" name="CostSize" id="inter" value="@list.Cost" data-index="@countSize" />
+                            countSize++;
                         }
                     </div>
                 </div>
@@ -376,8 +380,7 @@
             });
 
             let plusAussen_Innen = document.getElementById('addAussen_Innen');
-            let removeAussen_Innen = document.getElementById('addAussen_Innen_remove');
-
+         
             let docAussen = document.getElementById('AussenProfilDopel');
 
             window.addEventListener('load', function () 
@@ -400,31 +403,62 @@
 
             let productOptions = document.getElementById('productOptions');
             let addOptions = document.getElementById('addOptions');
-
+         
             plusAussen_Innen.addEventListener('click', () => {
-                let d = document.createElement('input');
-                d.setAttribute('name', 'Size');
-                d.setAttribute('placeholder', 'Size');
-                d.setAttribute('class', 'form-control');
-                d.id = 'aus';
 
-                let x = document.createElement('input');
-                x.setAttribute('name', 'CostSize');
-                x.setAttribute('placeholder', 'Cost');
-                x.id = 'inter';
-                x.setAttribute('class', 'form-control');
-                docAussen.append(d, x);
+                if (docAussen != null) 
+                {
+                    let minus = document.querySelectorAll('#addAussen_Innen_remove');
 
+                    let d = document.createElement('input');
+                    d.setAttribute('name', 'Size');
+                    d.setAttribute('placeholder', 'Aussen');
+                    d.setAttribute('class', 'form-control');
+                    d.id = 'aus';
+                    d.required = true;
 
+                    let minusButten = document.createElement('input');
+                    minusButten.setAttribute('class', 'btn btn-danger');
+                    minusButten.setAttribute('type', 'button');
+                    minusButten.id = 'addAussen_Innen_remove';
+                    minusButten.value = "-";
+                    minusButten.dataset.id = minus.length;
+                    minusButten.addEventListener("click", () => AussenInnenDelet(minus.length));
+
+                    let costAussen = document.createElement('input');
+                    costAussen.setAttribute('name', 'CostSize');
+                    costAussen.setAttribute('placeholder', 'Cost');
+                    costAussen.setAttribute('class', 'form-control');
+                    costAussen.setAttribute('step', '0.01');
+                    costAussen.setAttribute('type', 'number');
+                    costAussen.id = 'inter';
+                    costAussen.required = true;
+                    docAussen.append(minusButten, d, costAussen);
+                }
             });
-            removeAussen_Innen.addEventListener('click', () => {
+           
 
+            function AussenInnenDelet(id) {
+          
                 let d = document.querySelectorAll('#aus');
-                let x = document.querySelectorAll('#inter');
+                let costAussen = document.querySelectorAll('#inter');
+               
+                let minus = document.querySelectorAll('#addAussen_Innen_remove');
 
-                docAussen.removeChild(d[d.length - 1]);
-                docAussen.removeChild(x[x.length - 1]);
-            });
+                let index = Array.from(minus).findIndex(element => element.dataset.id === `${id}`);
+
+                if (index !== -1) 
+                {
+                    docAussen.removeChild(costAussen[index]);
+                    docAussen.removeChild(minus[index]);
+                    docAussen.removeChild(d[index]);
+
+                    console.log(`Элемент с data-id="${id}" найден. Его индекс: ${index}`);
+                } else {
+                    console.log(`Элемент с data-id="${id}" не найден.`);
+                }
+
+            }
 
             document.addEventListener("DOMContentLoaded", function () {
                 const container = document.getElementById('productOptions');
